[package]
name = "arc-en-ciel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
ctrlc = "3.4.2"
num_cpus = "1.16.0"
rayon = "1.9.0"
sha3 = "0.10.8"
